# WallapopScraper

./: README.md  pyproject.toml  wallapop.spec
app/: wallapop.py
