[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
pandas = "^2.2.3"
webdriver-manager = "^4.0.2"
python-dotenv = "^1.0.1"
packaging = "^24.1"
tkinterweb = "^3.24.7"
pywebview = "^5.2"
pyinstaller = "^6.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
